tests/errors/assertion.AssertionFailed.2.res
doing sth: 12 
>> Assertion | File: assertion.AssertionFailed.2.art
       error | Line: 7
             | 
             | [integer? x]